scaled_replicaset.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  name: rs-my-app-service
  namespace: rs-6
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: rs-my-app
  type: LoadBalancer
