ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ht-my-app-service
  namespace: ht-2
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: ht-my-app
  type: NodePort

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-app
  namespace: ht-2
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ht-my-app-service
              servicePort: 8080
          - path: /v2/*
            backend:
              serviceName: ht-my-app-service
              servicePort: 8080
